# drstorage

./: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml  lint.yml  publish-package.yml
src/drstorage/: __init__.py  version.py
src/drstorage/cli/: __init__.py  cli.py
src/drstorage/models/: __init__.py  base.py  f1.py  x2m.py
tests/: test_cli.py  test_import.py  test_parse.py
