[build-system]
requires = [
    "hatchling>=1.13.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

[project]
name = "drstorage"
dynamic = ["version"]
description = "Protocol Parser for Dr. Storage Dry Air Cabinets"
authors = [{name = "Giordon Stark", email = "gstark@cern.ch"}]
license = {text = "BSD 3-Clause"}
keywords = ["hep utilities physics protocol struct drstorage dry air cabinet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "click>=7.0",
    "construct>=2.10",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/kratsg/drstorage"
Documentation = "https://kratsg.github.io/drstorage/"
Source = "https://github.com/kratsg/drstorage"
Tracker = "https://github.com/kratsg/drstorage/issues"

[project.optional-dependencies]
lint = ["black", "flake8"]
test = [
    "pytest-console-scripts~=0.2",
    "pytest-cov~=2.8",
    "pytest-mock~=3.0",
    "pytest~=6.0",
]
develop = [
    "black",
    "bump2version",
    "flake8",
    "pre-commit",
    "pytest-console-scripts~=0.2",
    "pytest-cov~=2.8",
    "pytest-mock~=3.0",
    "pytest~=6.0",
    "twine",
]
complete = [
    "black",
    "bump2version",
    "flake8",
    "pre-commit",
    "pytest-console-scripts~=0.2",
    "pytest-cov~=2.8",
    "pytest-mock~=3.0",
    "pytest~=6.0",
    "twine",
]

[project.scripts]
drstorage = "drstorage.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/drstorage/_version.py"

[tool.build_sphinx]
project = "drstorage"
source-dir = "docs"
build-dir = "docs/_build"
all-files = "1"
warning-is-error = "1"

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]
#typing-modules = ["pyhs3.typing_compat"]
