[metadata]
name = drstorage
version = 0.0.1
description = Protocol Parser for Dr. Storage Dry Air Cabinets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kratsg/drstorage
author = Giordon Stark
author_email = gstark@cern.ch
license = BSD 3-Clause
license_file = LICENSE
keywords = hep utilities physics protocol struct drstorage dry air cabinet
project_urls =
    Documentation = https://kratsg.github.io/drstorage/
    Source = https://github.com/kratsg/drstorage
    Tracker = https://github.com/kratsg/drstorage/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Hardware
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=7.0
    construct>=2.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    drstorage = drstorage.cli:cli

[build_sphinx]
project = drstorage
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
